kubernetes/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: deployment-social-core
  labels: 
    type: deployment-social-core
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080'
spec:
  replicas: 1
  selector:
      matchLabels:
        release: prom
  template:
    metadata:
      labels:
        app: social-core
        release: prom
    spec:
      containers:
        - name: social-core
          image: kpolyanichko/social-core:latest
          ports:
            - containerPort: 8080
---
apiVersion : apps/v1
kind: Deployment
metadata:
  name: deployment-social-auth
  labels:
    type: deployment-social-auth
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080'
spec:
  replicas: 1
  selector:
    matchLabels:
      release: prom
  template:
    metadata:
      labels:
        app: social-auth
        release: prom
    spec:
      containers:
        - name: social-auth
          image: kpolyanichko/social-auth:latest
          ports:
            - containerPort: 8080
---
apiVersion : apps/v1
kind: Deployment
metadata:
  name: deployment-social-post
  labels:
    type: deployment-social-post
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080'
spec:
  replicas: 1
  selector:
    matchLabels:
      release: prom
  template:
    metadata:
      labels:
        app: social-post
        release: prom
    spec:
      containers:
        - name: social-post
          image: kpolyanichko/social-post:latest
          ports:
            - containerPort: 8080
---
apiVersion : apps/v1
kind: Deployment
metadata:
  name: deployment-social-dialog
  labels:
    type: deployment-social-dialog
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080'
spec:
  replicas: 1
  selector:
    matchLabels:
      release: prom
  template:
    metadata:
      labels:
        app: social-dialog
        release: prom
    spec:
      containers:
        - name: social-dialog
          image: kpolyanichko/social-dialog:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: social-core
  labels:
    app: social-core
    release: prom
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080'
spec:
  selector:
    app: social-core
    release: prom
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: social-auth
  labels:
    app: social-auth
    release: prom
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080'
spec:
  selector:
    app: social-auth
    release: prom
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: social-post
  labels:
    app: social-post
    release: prom
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080'
spec:
  selector:
    app: social-post
    release: prom
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: social-dialog
  labels:
    app: social-dialog
    release: prom
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080'
spec:
  selector:
    app: social-dialog
    release: prom
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
